[package]
name = "search-in-sight"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sis"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false

[profile.performance]
inherits = "release"
opt-level = 3
codegen-units = 16
lto = false

[profile.size]
inherits = "release"
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
matchr = "0.2.4"
ratatui = "0.29.0"
